# modu-friend

./: .gitignore  pyproject.toml  pytest.ini  run.sh
.github/workflows/: pytest.yml
mfriend/: config.py  data_types.py  database.py  main.py  test_main.py
mfriend/ai/: crud.py  exceptions.py  models.py  router.py  schemas.py
mfriend/ai/openai/: chain.py  history.py
mfriend/auth/: crud.py  exceptions.py  models.py  router.py  schemas.py  util.py
src/: __init__.py  config.py  database.py  main.py  run.py
src/app/: main.py
src/auth/: models.py  router.py
src/lib/: chain.py
src/mfriend/: config.py  main.py  openapi.py
src/mfriend/ai/: crud.py  model.py  router.py  schemas.py
src/mfriend/auth/: crud.py  exceptions.py  models.py  router.py  schemas.py
