[tool.poetry]
name = "modu-friend"
version = "0.1.0"
description = ""
authors = ["myoun <aiden080605@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
langchain = "0.0.329"
pydantic = {version = "*", extras = ["dotenv"]}
bs4 = "^0.0.1"
sqlalchemy = "^2.0.19"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
langchain-experimental = "^0.0.17"
tiktoken = "^0.5.1"
fastapi = {extras = ["all"], version = "^0.98.0"}
httpx = "^0.25.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
